# large-file-mt-proc

./: README.md
headers/: application.h
sources/: CMakeLists.txt  application.cpp  main.cpp
